--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/backgroundonboardingscreen.jpg
+    - assets/images/backgroundonboardingscreenss.JPG
 
   fonts:
     - family: Protest Riot
