--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   shared_preferences: ^2.5.2
   intl: ^0.20.2
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
