--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.2
   intl: ^0.20.2
   permission_handler: ^11.4.0
+  country_code_picker: ^3.2.0
 
 dev_dependencies:
   flutter_test:
