--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.20.2
   permission_handler: ^11.4.0
   country_code_picker: ^3.2.0
+  flutter_svg: ^2.0.17
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
