--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.0.17
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
